# legal-citation-bert

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  benchmark.py  commands.py  debug.sh  dl_spacy.sh  docker-compose.yml  docker-entrypoint.sh  hello.py  prose_statutes_1722101071.jsonl  pyproject.toml  pyrightconfig.json  ruff.toml
prepared_data/v0/: candidate.jsonl
prepared_data/v1/: candidate.jsonl
raw_data/: cl_100991832.jsonl  cl_102653356.jsonl  cl_105645867.jsonl  cl_105645912.jsonl  cl_105650280.jsonl  cl_106622623.jsonl  cl_107088542.jsonl  cl_114505997.jsonl  cl_118650123.jsonl  cl_124232577.jsonl  cl_127722685.jsonl  cl_128221463.jsonl  cl_136908727.jsonl  cl_139270560.jsonl  cl_141115075.jsonl  cl_141587910.jsonl  cl_142507931.jsonl  cl_143134547.jsonl  cl_144153156.jsonl  cl_146678035.jsonl  cl_150603510.jsonl  cl_152802376.jsonl  cl_154208763.jsonl  cl_157909333.jsonl  cl_163175831.jsonl  cl_163327655.jsonl  cl_166548937.jsonl  cl_170037749.jsonl  cl_1714320896.jsonl  cl_1714322231.jsonl  cl_172869954.jsonl  cl_44897491.jsonl  cl_52735660.jsonl  cl_65772771.jsonl  cl_87811316.jsonl  cl_91043768.jsonl  cl_96014058.jsonl  cl_98145193.jsonl  prose_statutes_1722101071.jsonl  prose_statutes_1722101143.jsonl  (+26 more)
setup/: 00_setup.py
src/: mistral.py  openai.py
src/benchmarking/: items.py  llm.py  model.py  scoring.py  temp_aggregation.py  types.py
src/benchmarking/test_files/: loader.py  manifest.md
src/benchmarking/test_files/campos-chavez_31_oct_amicus/: correct.json  correct.py
src/benchmarking/test_files/testerson_mctest/: correct.py
src/data/: generate.py  inspect.py  manage_datasets.py  prepare.py  text_manipulation.py  types.py
src/tests/: test_aggregation.py  test_eyecite.py
src/training/: baseline.py  constants.py  model.py  train.py
