[project]
name = "legal-citation-bert"
version = "0.1.0"
description = ""
authors = [
    {name = "Samier", email = "samier_saeed@protonmail.com"},
]
dependencies = [
    "typer>=0.12.3",
    "wasabi>=1.1.3",
    "nltk>=3.8.1",
    "pydantic>=2.6.4",
    "datasets>=2.18.0",
    "transformers",
    "polars>=0.20.17",
    "scikit-learn>=1.4.1.post1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "mistralai>=0.1.8",
    "outlines>=0.0.39",
    "openai>=1.23.2",
    "tiktoken>=0.6.0",
    "pyright>=1.1.360",
    "eyecite>=2.6.3",
    "pytest>=8.1.2",
    "regex>=2024.4.16",
    "pymupdf>=1.24.5",
    "more-itertools>=10.3.0",
    "debugpy>=1.8.2",
    "llvmlite==0.41.0",
    "numba==0.58.1"
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.1",
    "pyright>=1.1.377",
    "debugpy>=1.8.5",
]

[tool.uv.pip]
system = true

