[project]
name = "legal-citation-bert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0.1",
    "openai>=1.52.0",
    "pandas>=2.2.3",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "spacy>=3.8.2",
    "transformers>=4.45.2",
    "typer>=0.12.5",
    "wasabi>=1.1.3",
]
